# myshell

./: CMakeLists.txt  main.cpp
includes/: CommandLineParser.h  EnvironmentVariables.h  MyShell.h
programs/mycat/: CMakeLists.txt  main.cpp
programs/myls/: CMakeLists.txt  main.cpp
programs/myls/includes/: CommandLineParser.h  Myls.h
programs/myls/src/: CommandLineParser.cpp  Myls.cpp
src/: CommandLineParser.cpp  EnvironmentVariables.cpp  MyShell.cpp
